tooling/nargo_cli/tests/snapshots/execute__tests__workspace_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "6843422481416182266",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUwQ6CMAztZEQn0YN40a8YgsKRg37IIuE7+HRDbKWbw4NsTUhL2r2+vjIEvE3gM5pEv4Jvo5oWvV5mRUAsHZOniMTzQ5THAuaFP6NXYC9pzCcBB1YeTqHwG13dlGe+gPxLxTAj4F8IX8bB12vEuQ82Pjh9d2BfXn6GcvwiPzC3wTzFe4yVgxdj75xTaN1yD3/qleGsR6YH1zX9cTZ1anNHr1jfwYHhgtMrg+k/IIfw/etGa+qbDJMOpAE3yfK8/oTv25k52j959rUp+tL05mq6rnoaV6fR+N5fXIrkqekGAAA=",
  "debug_symbols": "lZDNCsMgEITfZc8eklDbklcJJZhkDYKo+FMo4rt3LT1Ibl6WneXbgZkMB27pXJWRNsC8ZNB2F1FZQyoXBptXWqtzbc8w1DHyHx+cMFWGKHyE+cYZoDlg5iN9S6WR1qG8GIz3Tv7RyT97+ELqLbwSm8Z/VJnM3iSPH4eXEpy3Ox7JY62jaYLmMg1s4mRL1l8=",
  "file_map": {
    "50": {
      "source": "fn main(x: Field, y: pub Field) {\n    assert(x == y);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
